[package]
name = "usbguard-notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
zbus = { version = "4.1.1", features = ["tokio"], default-features = false }
zbus_macros = "4.1.1"
zvariant = "4.0.1"
