[package]
name = "usbguard-notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }

tracing = "0.1"
tracing-subscriber = "0.3"

zbus = { version = "4", features = ["tokio"], default-features = false }
zvariant = "4"
